[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://SpritesAnimados.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Jugador/InterfazJugador.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Interfaz.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Nivel.tres" type="DynamicFont" id=5]
[ext_resource path="res://Images/Sprites/EspadaRegular.png" type="Texture" id=6]
[ext_resource path="res://Pantallas/PanelSlot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Images/Interfaz.png" type="Texture" id=8]
[ext_resource path="res://Pantallas/HasMuerto.tscn" type="PackedScene" id=9]
[ext_resource path="res://Images/PanelItem.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 31, 11, 81, 5 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 36, 5, 76, 5 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 36, 17, 76, 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 36, 23, 76, 5 )

[node name="InterfazJugador" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 3.0
margin_right = 256.0
margin_bottom = 147.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ImagenMoneda" type="AnimatedSprite" parent="."]
position = Vector2( 222.5, 138.5 )
scale = Vector2( 0.4375, 0.4375 )
frames = ExtResource( 2 )
animation = "Moneda"

[node name="Monedas" type="Label" parent="."]
margin_left = 224.0
margin_top = 134.0
margin_right = 250.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraVida" type="ProgressBar" parent="."]
margin_left = 35.0
margin_top = 14.0
margin_right = 90.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraMana" type="ProgressBar" parent="."]
margin_left = 35.0
margin_top = 19.0
margin_right = 90.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraEstamina" type="ProgressBar" parent="."]
margin_left = 35.0
margin_top = 24.0
margin_right = 90.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 15.0
margin_right = -231.0
margin_bottom = -122.0
custom_fonts/font = ExtResource( 5 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmaPrincipal" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 33.0
margin_right = -110.0
margin_bottom = 54.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmaSecundaria" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 47.5
margin_right = -75.0
margin_bottom = 47.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = 60.5
margin_right = -95.0
margin_bottom = 60.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HasMuerto" parent="." instance=ExtResource( 9 )]
visible = false

[node name="PanelSlotItem1" parent="." instance=ExtResource( 7 )]
margin_left = 24.0
margin_top = 93.0
margin_right = 44.0
margin_bottom = 118.0

[node name="PanelSlotArma1" parent="." instance=ExtResource( 7 )]
margin_left = 3.0
margin_top = 106.0
margin_right = 23.0
margin_bottom = 131.0

[node name="PanelSlotItem2" parent="." instance=ExtResource( 7 )]
margin_left = 24.0
margin_top = 119.0
margin_right = 44.0
margin_bottom = 144.0

[node name="PanelSlotArma2" parent="." instance=ExtResource( 7 )]
margin_left = 45.0
margin_top = 106.0
margin_right = 65.0
margin_bottom = 131.0
